--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "@oozcitak/dom": "1.15.6",
     "@oozcitak/util": "8.3.4",
     "color-name": "^1.1.4",
+    "dist": "^0.1.2",
     "html-entities": "^2.3.3",
     "html-minifier-terser": "^7.2.0",
     "html-to-vdom": "^0.7.0",
